--- a/introduction_python.ipynb
+++ b/introduction_python.ipynb
@@ -28,25 +28,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#### variable type number ###\n",
-    "\n",
-    "a = 1\n",
-    "b = 2.5\n",
-    "c = 3.14j\n",
-    "\n",
-    "print(type(a))\n",
-    "print(type(b))\n",
-    "print(type(c))\n",
-    "\n",
-    "print(a+b)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "### variable type string ###\n",
     "\n",
     "var1 = 'Hello World! '\n",
@@ -58,6 +39,25 @@
     "print(var1[0:5])\n",
     "print(var1+var2)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### variable type number ###\n",
+    "\n",
+    "a = 1\n",
+    "b = 2.5\n",
+    "c = 3.14j\n",
+    "\n",
+    "print(type(a))\n",
+    "print(type(b))\n",
+    "print(type(c))\n",
+    "\n",
+    "print(a+b)\n"
    ]
   },
   {
@@ -146,48 +146,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "{'mexico': ['costa_rica'], 'costa_rica': ['mexico', 'colombia', 'venezuela'], 'peru': ['venezuela', 'chile'], 'colombia': ['costa_rica', 'chile'], 'venezuela': ['costa_rica', 'chile', 'peru'], 'chile': ['colombia', 'venezuela', 'peru']}\n\n\n{('mexico', 'costa_rica'): 1, ('costa_rica', 'mexico'): 1, ('costa_rica', 'colombia'): 2, ('colombia', 'costa_rica'): 2, ('costa_rica', 'venezuela'): 1, ('venezuela', 'costa_rica'): 1, ('colombia', 'chile'): 1, ('chile', 'colombia'): 1, ('venezuela', 'chile'): 2, ('chile', 'venezuela'): 2, ('venezuela', 'peru'): 1, ('peru', 'venezuela'): 1, ('peru', 'chile'): 1, ('chile', 'peru'): 1}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "### Examples For and While ###\n",
     "\n",
-    "nodes = {\n",
-    "    'mexico': ['costa_rica'],\n",
-    "    'costa_rica': ['mexico', 'colombia', 'venezuela'],\n",
-    "    'peru': ['venezuela', 'chile'], \n",
-    "    'colombia': ['costa_rica', 'chile'], \n",
-    "    'venezuela': ['costa_rica', 'chile', 'peru'], \n",
-    "    'chile': ['colombia', 'venezuela', 'peru']\n",
-    "    }\n",
+    "print(\"Example For loop \\n\")\n",
     "\n",
-    "links = {\n",
-    "    ('mexico', 'costa_rica'): 1,\n",
-    "    ('costa_rica', 'mexico'): 1,\n",
-    "    ('costa_rica','colombia'): 2,\n",
-    "    ('colombia', 'costa_rica'): 2,\n",
-    "    ('costa_rica', 'venezuela'): 1,\n",
-    "    ('venezuela', 'costa_rica'): 1,\n",
-    "    ('colombia', 'chile'): 1,\n",
-    "    ('chile', 'colombia'): 1,\n",
-    "    ('venezuela', 'chile'): 2,\n",
-    "    ('chile', 'venezuela'): 2,\n",
-    "    ('venezuela', 'peru'): 1,\n",
-    "    ('peru', 'venezuela'): 1,\n",
-    "    ('peru', 'chile'): 1,\n",
-    "    ('chile', 'peru'): 1\n",
-    "    }\n",
+    "words = ['cat', 'window', 'defenestrate']\n",
+    "for w in words:\n",
+    "    print(w, len(w))\n",
     "\n",
-    "print(nodes)\n",
-    "print(\"\\n\")\n",
-    "print(links)"
+    "print(\"\\nExample While loop \\n\")\n",
+    "\n",
+    "a = 0\n",
+    "while a < len(words):\n",
+    "    print(words[a], len(words[a]))\n",
+    "    a += 1\n"
    ]
   },
   {
@@ -195,7 +171,62 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### Examples functions ###\n",
+    "\n",
+    "def fibonacci(n):\n",
+    "    if n <= 0:\n",
+    "        return 0\n",
+    "    elif n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        array = []\n",
+    "        n1 = 0\n",
+    "        n2 = 1\n",
+    "        count = 0\n",
+    "        while count < n:\n",
+    "            array.append(n1)\n",
+    "            nth = n1 + n2\n",
+    "            n1 = n2\n",
+    "            n2 = nth\n",
+    "            count += 1\n",
+    "        return array\n",
+    "\n",
+    "print(fibonacci(10))"
+   ]
+  },
+  {
+   "source": [
+    "\n",
+    "class Router:\n",
+    "\n",
+    "    def __init__(self,interfaces,slot,ios,hostname):\n",
+    "        self.interfaces = interfaces\n",
+    "        self.slot = slot\n",
+    "        self.ios = ios\n",
+    "        self.hostname = hostname\n",
+    "    \n",
+    "    def changeHostname(self,newName):\n",
+    "        self.hostname = newName\n",
+    "    \n",
+    "    def upgrade(self,newIOS):\n",
+    "        self.ios = newIOS\n",
+    "\n",
+    "    def routerInformation(self):\n",
+    "        print(\"Hostname: \" + self.hostname)\n",
+    "        print(\"Slots: \" + str(self.slot))\n",
+    "        print(\"IOS: \" + str(self.ios))\n",
+    "        print(\"Interfaces: \"+ str(self.interfaces))\n",
+    "\n",
+    "router_guatemala = Router(4,10,\"5.3.3\",\"rguatemala\")\n",
+    "router_colombia = Router(5,6,\"4.3.4\",\"rcolombia\")\n",
+    "router_guatemala.routerInformation()\n",
+    "router_colombia.routerInformation()\n"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
   }
  ]
 }
