Changes for Netmiko
Changes for Netmiko

--- a/introduction_python.ipynb
+++ b/introduction_python.ipynb
@@ -227,6 +227,93 @@
    "metadata": {},
    "execution_count": null,
    "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "RP/0/RP1/CPU0:SSSASVCEN2D3FWI1#\n",
+      "Wed Feb 17 08:51:59.592 ESV\n",
+      "\n",
+      "Interface                      IP-Address      Status          Protocol Vrf-Name\n",
+      "Bundle-Ether12                 unassigned      Up              Up       default \n",
+      "Bundle-Ether12.1               10.189.255.201  Up              Up       default \n",
+      "Bundle-Ether12.200             10.189.255.205  Up              Up       Isla_App_Bras\n",
+      "Bundle-Ether12.210             10.189.255.209  Up              Up       INTERNET_ID_CEN\n",
+      "Bundle-Ether12.220             10.189.255.213  Up              Up       INTERNET_HFC_CEN\n",
+      "Bundle-Ether12.230             10.189.255.217  Up              Up       OUTSIDE_CGN\n",
+      "Bundle-Ether12.250             10.189.255.221  Up              Up       INSIDE_CGNAT_HND\n",
+      "Bundle-Ether12.702             10.189.255.225  Up              Up       CDN_OAM_ESV\n",
+      "Loopback0                      10.192.64.121   Up              Up       default \n",
+      "Loopback1                      10.192.65.121   Up              Up       default \n",
+      "ServiceApp1                    10.192.94.49    Up              Up       INSIDE_CGNAT\n",
+      "ServiceApp2                    10.192.94.53    Up              Up       default \n",
+      "ServiceApp3                    10.192.73.69    Up              Up       CGN_BRAS_CENTRO_IN\n",
+      "ServiceApp4                    10.192.73.93    Up              Up       OUTSIDE_CGN\n",
+      "ServiceApp5                    10.189.255.1    Up              Up       INSIDE_CGNAT_HND_SRVAPP\n",
+      "ServiceApp6                    10.189.255.29   Up              Up       CGN_HFC_CENTRO\n",
+      "ServiceApp7                    10.189.252.1    Up              Up       CGN_PLUS_BRAS_CENTRO\n",
+      "ServiceApp8                    10.189.255.253  Up              Up       OUTSIDE_CGN\n",
+      "ServiceApp9                    10.189.247.61   Up              Up       INTERNET_LTE_CEN\n",
+      "ServiceApp10                   10.192.76.169   Up              Up       CGN_PLUS_HFC_CENTRO\n",
+      "ServiceInfra3                  10.192.94.1     Up              Up       default \n",
+      "ServiceInfra5                  10.192.94.45    Up              Up       default \n",
+      "MgmtEth0/RP1/CPU0/0            unassigned      Shutdown        Down     default \n",
+      "HundredGigE0/0/0/0             10.192.94.234   Up              Up       default \n",
+      "HundredGigE0/1/0/0             unassigned      Up              Up       default \n",
+      "HundredGigE0/2/0/0             10.189.255.242  Up              Up       default \n",
+      "HundredGigE0/4/0/0             10.189.255.233  Up              Up       default \n",
+      "HundredGigE0/6/0/0             10.192.94.185   Up              Up       default \n",
+      "HundredGigE0/7/0/0             unassigned      Up              Up       default \n",
+      "MgmtEth0/RP0/CPU0/0            10.130.0.183    Up              Up       mgmt    \n"
+     ]
+    }
+   ],
+   "source": [
+    "from netmiko import ConnectHandler\n",
+    "from getpass import getpass\n",
+    "\n",
+    "cisco1 = {\n",
+    "    \"device_type\": \"cisco_xr\",\n",
+    "    \"host\": \"10.192.65.121\",\n",
+    "    \"username\": \"htts\",\n",
+    "    \"password\": getpass(),\n",
+    "}\n",
+    "\n",
+    "# Will automatically 'disconnect()'\n",
+    "with ConnectHandler(**cisco1) as net_connect:\n",
+    "    print(net_connect.find_prompt())\n",
+    "    print(net_connect.send_command('show ip int brief'))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from netmiko import ConnectHandler\n",
+    "\n",
+    "huawei1 = {\n",
+    "    \"device_type\": \"huawei\",\n",
+    "    \"host\": \"10.179.0.64\",\n",
+    "    \"username\": \"htts\",\n",
+    "    \"password\": \"GestionJan2021*\",\n",
+    "}\n",
+    "\n",
+    "# Will automatically 'disconnect()'\n",
+    "with ConnectHandler(**huawei1) as net_connect:\n",
+    "    print(net_connect.find_prompt())\n",
+    "    print(net_connect.send_command('display interface brief'))"
+   ]
   }
  ]
 }
